# mandelbrot

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  calcs_scalar.cpp  calcs_simd.cpp  defines_and_types.hpp  fn_defs.hpp  iteration_colors.cpp  main.cpp  main_audio_visualizer.cpp  reinit.cpp  thread_fn.cpp  user_input.cpp
